# practice-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: lesson-01-first-project.md  lesson-02-variables.md  lesson-03-console-input.md  lesson-04-operators-and-expressions.md  lesson-05-conditionals.md  lesson-06-loops.md  lesson-07-functions.md  lesson-08-vector-string.md  lesson-09-struct.md  lesson-10-class.md  lesson-11-const-and-references.md  lesson-12-pointer.md  lesson-13-header-source.md  lesson-14-file-io.md  project-01-console-todo-app.md  project-02-first-qt-widgets-app.md
lessons/02_variables/: main.cpp
lessons/03_console_input/: main.cpp
lessons/04_operators/: main.cpp
lessons/05_conditionals/: main.cpp
lessons/06_loops/: main.cpp
lessons/07_functions/: main.cpp
lessons/08_vector_string/: main.cpp
lessons/09_struct/: main.cpp
lessons/10_class/: main.cpp
lessons/11_const_references/: main.cpp
lessons/12_pointers/: main.cpp
lessons/13_header_source/: main.cpp  student.cpp  student.hpp
lessons/14_file_io/: main.cpp
projects/01_console_todo_app/: main.cpp
projects/02_first_qt_widgets_app/src/: main.cpp
src/: main.cpp
